@@ -1,0 +1,3 @@
+:diagram_languages:
+- plantuml
+- nomnoml
